# Rustinnit

./: Cargo.toml  README.md  build_all.sh  buildclient.sh  commands.txt  ipkeys.json  networkdata.json  useraccount.json
src/: mainclient.rs  mainserver.rs
src/data/: cryptoinnit.rs  networkdata.rs  useraccount.rs
src/utils/: cryptoinnit.rs  filesinnit.rs  networkinnit.rs
