[package]
name = "Rustinnit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustinnit_server"
path = "src/mainserver.rs"

[[bin]]
name = "rustinnit_client"
path = "src/mainclient.rs"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rust-crypto = "0.2.36"
block-cipher = "0.8.0"
aes = "0.8.2"
block-modes = "0.9.1"
base64 = "0.21.0"
if-addrs = "0.10.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
aes-gcm = "0.10.1"
hex = "0.4.3"
arrayvec = "0.7.2"
getrandom = "0.2.8"
